# cwar-staking-program

./: .gitignore  README.md
program/: Cargo.toml  cleanup.sh  deploy-devnet.sh  deploy-localnet.sh  redeploy-devnet.sh  redeploy-localnet.sh  test.sh
program/interface/scripts/: initialize-pool.ts  run-ts-fn.ts
program/interface/src/config/: connection-service.ts
program/interface/src/constants/: constants.ts  pubkeys.ts
program/interface/src/data/: get-wallet-balance.ts
program/interface/src/models/: cwar-pool-info.ts  cwar-staking-instructions.ts  get-user-pending-rewards.ts  user-info.ts
program/interface/src/transactions/: add-funder-transaction.ts  claim-rewards-transaction.ts  close-pool-transaction.ts  close-user-transaction.ts  create-initialize-pool-transaction.ts  create-user-transaction.ts  index.ts  (+4 more)
program/interface/test/: AddFunderTransaction.test.ts  ClaimRewardsTransaction.test.ts  ClosePoolTransaction.test.ts  CloseUserTransaction.test.ts  CreateUserTransaction.test.ts  FundPoolTransaction.test.ts  InitializePoolTransaction.test.ts  InitializeTestPoolHelper.ts  LockingDuration.test.ts  PoolInfo.test.ts  RemoveFunderTransaction.test.ts  StakeCwarTransaction.test.ts  UnstakeCwarTransaction.test.ts  UnstakePenality.test.ts  UserInfo.test.ts  testHelpers.ts
program/src/: error.rs  instruction.rs  processor.rs  state.rs  utils.rs
program/src/processor/: add_funder.rs  claim_rewards.rs  close_pool.rs  close_user.rs  create_user.rs  fund_pool.rs  initialize_cwar_pool.rs  remove_funder.rs  stake_cwar.rs  unstake_cwar.rs
program/tests/: tests.rs
(+4 files in other folders)
