[package]
name = "cwar-token-staking"
version = "0.1.0"
edition = "2018"
authors = ["Cryowar <email>"]
license = "WTFPL"
repository = ""
publish = false

[dependencies]
solana-program = "1.8.6"
thiserror = "1.0.30"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9.1"
bs58 = "0.4.0"
spl-associated-token-account = "1.0.3"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-sdk = "1.8.6"
solana-validator = "1.8.6"
tracing = "0.1.30"
solana-logger = "1.8.6"
solana-client = "1.8.6"
rand = "0.8.4"

[lib]
crate-type = ["cdylib", "lib"]
